k8s/subscriber.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpns-subscriber
spec:
  replicas: 1
  selector:
    matchLabels:
      type: frontend
      service: cpns-subscriber
  template:
    metadata:
      labels:
        type: frontend
        service: cpns-subscriber
    spec:
      containers:
        - name: frontend
          image: vaibhavchopra/cpns-subscriber:latest
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 100m
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 200Mi
          readinessProbe:
            httpGet:
              path: /subscriber
              port: 80
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /subscriber
              port: 80
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: cpns-subscriber
spec:
  ports:
    - port: 80
  selector:
    type: frontend
    service: cpns-subscriber
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cpns-subscriber-ingress
  annotations:
    kubernetes.io/ingress.class: "azure/application-gateway"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - cdd40854e01441e1a018.centralindia.aksapp.io
      secretName: cpns-subscriber-tls
  rules:
    - host: cdd40854e01441e1a018.centralindia.aksapp.io
      http:
        paths:
          - path: /subscriber*
            pathType: Prefix
            backend:
              service:
                name: cpns-subscriber
                port:
                  number: 80
